# usc-semantic-search

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  PROJECT_TRACKING.md  QUICKSTART.md  README.md  VOYAGE_CONTEXT_3_IMPLEMENTATION_PLAN.md  check_199a.py  check_sections.py  debug_db.py  pyproject.toml  requirements.txt  run_server.sh  setup.py
.github/workflows/: ci.yml
docs/: fastmp.md  uscode.md  voyageai.md
scripts/: __init__.py  download_usc.py  process_usc.py  test_server.py
scripts/data/xml/: download_catalog.json  download_summary.txt
scripts/data/xml/schema/: USLM-1.0.xsd  dc.xsd  dcmitype.xsd  dcterms.xsd
tests/: __init__.py  test_basic.py
usc_mcp/: __init__.py  database.py  embedder.py  parser.py  server.py  tools.py
